--- a/.github/workflows/rubocop_linter_action.yml
+++ b/.github/workflows/rubocop_linter_action.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Rubocop Linter
+    - name: Rubocop Linter with exit code
       uses: andrewmcodes/rubocop-linter-action@rubocop-exit-code
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
