--- a/.github/workflows/rubocop_linter_action.yml
+++ b/.github/workflows/rubocop_linter_action.yml
@@ -9,5 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Rubocop Linter with exit code
       uses: MiguelSavignano/rubocop-linter-action@rubocop-exit-code
+      with:
+        exit_on_failure: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
