--- a/.github/workflows/rubocop_linter_action.yml
+++ b/.github/workflows/rubocop_linter_action.yml
@@ -11,6 +11,6 @@ jobs:
     - name: Rubocop Linter with exit code
       uses: MiguelSavignano/rubocop-linter-action@rubocop-exit-code
       with:
-        exit_on_failure: false
+        exit_on_failure: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
